src/builder/tests/snapshots/ciboulette2postgres__builder__tests__cte_final__empty_sparse.snap
---
source: src/builder/tests/cte_final.rs
expression: res

---
(
    "SELECT \"public\".\"peoples\".\"id\" AS \"id\", $0::TEXT AS \"type\", NULL::json  AS \"data\" FROM \"public\".\"peoples\"",
    Ciboulette2SqlArguments {
        inner: [
            Text(
                Some(
                    "peoples",
                ),
            ),
        ],
    },
)
