src/builder/tests/snapshots/ciboulette2postgres__builder__tests__cte_final__sparse.snap
---
source: src/builder/tests/cte_final.rs
expression: res

---
(
    "SELECT \"public\".\"peoples\".\"id\" AS \"id\", $0::TEXT AS \"type\", JSON_BUILD_OBJECT($1, \"public\".\"peoples\".\"first-name\")  AS \"data\" FROM \"public\".\"peoples\" ",
    Ciboulette2SqlArguments {
        inner: [
            Text(
                Some(
                    "peoples",
                ),
            ),
            Text(
                Some(
                    "first-name",
                ),
            ),
        ],
    },
)
